# KTH

./: README.md
DD1351/cafg-Lab2/tests/: bevis.pl
DD1351/lab2/: invalid00.txt  valid00.txt
DD1351/lab3/: bevis.pl  invalid00.txt  valid00.txt
DD1351/tasfiaa-Lab1/: graphs.pl  intro.pl  labquestions.md  recursion.pl  remove_duplicates.pl
DD1361/tasfiaa-F2/helpfiles/: F2.hs  molbio.hs
DD1361/tasfiaa-F3/: snake  snake.cabal  snake.hi  snake.hs  stack.yaml
DD1361/tasfiaa-F3/.stack-work/: stack.sqlite3
DD1361/tasfiaa-F3/.stack-work/ghci/bd437745/: cabal_macros.h
DD1361/tasfiaa-S1/S1/: s1.py
DD1361/tasfiaa-S2/docs/: grammatik.txt
DD1361/tasfiaa-S2/src/: leona.java  test11  test3  test8
DD1361/tasfiaa-S3/S3/: DFA.java  Main.java
DD1361/tasfiaa-W1/: testa_lokalt
DD1361/tasfiaa-W1/database/: account_items.db  tables.sql
DD1361/tasfiaa-W1/src/: confirm.php  delete.php  functions.php  generate_shopping_list.php  index.php  logout.php  modify_db.php  register.php  thanks.php
DD1361/tasfiaa-X1/bus_numbers/: bus_numbers.java  (+1 more)
DD1368/lab1/: information.sql  lab1_1.sql  lab1_1_plus.sql  questions.txt
DD1368/lab2/: lab_2.sql
DD1368/lab3/: lab3.sql
DD1368/lab4/: connect.py  main.py  procedures.sql
IS1500/lab1-files/: analyze.S  hex2asc.S  labmain.S  timetemplate.S
IS1500/lab2-files/: pointers  pointers.c  prime  prime.c  prime¨  print-primes  print-primes.c  sieves  sieves-heap  sieves-heap.c  sieves.c
IS1500/lab3-files/: hex2asc.S  labmain.c  main.elf  main.elf.txt  timetemplate.S
IS1500/lab4-files/: factorials.S  processor_riscv_evolution.circ
(+24 files in other folders)
