cabal-version:       2.2

name:                snake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/temp#readme
license:             BSD-3-Clause
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable snake
  hs-source-dirs:      .
  main-is:             snake.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hscurses
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/snake
